--- a/ellipse.yaml
+++ b/ellipse.yaml
@@ -1,7 +1,7 @@
 # Train/val/test sets as 1) dir: path/to/imgs, 2) file: path/to/imgs.txt, or 3) list: [path/to/imgs1, path/to/imgs2, ..]
-path: ../datasets/ellipse/192x192_1class_long_narrow_ellipses  # dataset root dir
-train: train/images  # train images (relative to 'path')
-val: test/images  # val images (relative to 'path')
+path: ../datasets/ellipse_datasets/192x192_1class_long_narrow_ellipses  # dataset root dir
+train: train/images/  # train images (relative to 'path')
+val: test/images/  # val images (relative to 'path')
 test:  # test images (optional)
 
 # Classes
